--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,16 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <div class="header">
+            <div class="logo">WebBrand <span>The best ever</span></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="content">
             <h1>Versión 4</h1>
             <p>Aquí va un párrafo del post</p>
