--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo">WebBrand <span>The best ever</span></div>
+            <div class="logo">WeBrand <span>The best ever</span></div>
             <div class="menu">
                 <ul>
                     <li><a href="#">Home</a></li>
