--- a/blogpost.html
+++ b/blogpost.html
@@ -10,11 +10,10 @@
 
 <body>
     <div class="header">
-        <img src="images/logo.png" alt="logo webrand" class="logo-img" />
+        <a href="#"><img src="images/logo.png" alt="logo webrand" class="logo-img" /></a>
         <div class="logo">WeBrand <span>The best ever</span></div>
         <div class="menu">
             <ul>
-                <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
